# pan-ansible-workshop

./: .gitignore  pyproject.toml
docker/: pyproject.toml
examples/configuration/security_policy/: playbook.yaml
examples/configuration/security_policy/01_simple/: README.md  ansible.cfg  playbook.yaml
examples/configuration/security_policy/02_group_vars/host_vars/: panorama1.yaml
examples/configuration/security_policy/03_ansible_vault/: playbook.yaml
examples/configuration/security_policy/03_ansible_vault/group_vars/: panorama.yaml
examples/configuration/security_policy/04_templating/: ansible.cfg  inventory.yaml
examples/configuration/security_policy/04_templating/group_vars/: panorama.yaml
